<resources>
    <string name="app_name">Amplify</string>
    <string name="app_version">0.1</string>

    <!-- Audio Actions -->
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>

    <!-- Queue Actions -->
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>

    <!-- MainActivity -->
    <string name="home">Home</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="main_activity_play_pause_content_desc">Play or pause current track</string>

    <string name="sample_summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis elit egestas, vulputate tellus vitae, ultricies nisi. Suspendisse quis sollicitudin erat. Vivamus eu maximus purus. Vivamus quis lacus sem. Praesent rhoncus porttitor lacus nec fringilla. Proin euismod semper odio, et lobortis purus volutpat maximus. Nulla a feugiat massa. Suspendisse vel felis egestas, consectetur mauris sit amet, semper lacus. Aliquam ut metus mi. Morbi a rutrum tellus. Donec vitae luctus nisi. Etiam aliquam elementum felis ut venenatis. Fusce tempor porta purus ut commodo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="section_format">Page %1$d</string>

    <string name="home_tab_title">Home</string>
    <string name="home_recently_played_carousel_header_title">Recently Played Artists</string>
    <string name="home_recently_added_carousel_header_title">Recently Added Music</string>
    <string name="home_recent_songs_header_title">Recently Played Songs</string>
    <string name="greeting_morning">Good morning,\n%s</string>
    <string name="greeting_afternoon">Good afternoon,\n%s</string>
    <string name="greeting_evening">Good evening,\n%s</string>
    <string name="greeting_night">Good night,\n%s</string>

    <!-- Artist -->
    <string name="artist_artists_title">Artists</string>
    <string name="artist_shuffle_btn">Shuffle</string>
    <string name="artist_expand_section_button">See All</string>
    <string name="artist_albums_header">Albums</string>
    <string name="artist_singles_eps_header">Singles &amp; EPs</string>
    <string name="artist_top_songs_header">Top Songs</string>

    <!-- Artist Albums horizontal list -->
    <string name="artist_albums_subtitle">%1$s • %2$s</string>

    <!-- Albums -->
    <string name="albums_tab_title">Albums</string>

    <!-- Songs -->
    <string name="songs_tab_title">Songs</string>

    <!-- Playlists -->
    <string name="playlists_tab_title">Playlists</string>
    <string name="create_playlist_dialog_title">Create New Playlist</string>
    <string name="create_playlist_dialog_confirm">Create</string>
    <string name="create_playlist_dialog_cancel">Cancel</string>
    <string name="create_playlist_dialog_hint">Playlist Name</string>
    <string name="playlist_zero_state_title">This playlist is empty</string>
    <string name="delete_playlist_confirmation_message">Are you sure you want to delete this playlist?</string>
    <string name="delete_playlist">Delete Playlist</string>

    <!-- Playlist -->
    <string name="edit_playlist">Edit Playlist</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <!-- Album -->
    <string name="album_play_btn">Play</string>
    <string name="album_shuffle_btn">Shuffle</string>
    <string name="album_subtitle">%1$s • %2$s</string>
    <plurals name="album_track_count">
        <item quantity="one">%d Track</item>
        <item quantity="other">%d Tracks</item>
    </plurals>
    <plurals name="album_duration">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="album_expand_review_btn">Expand</string>

    <!-- Onboarding -->
    <string name="app_description">Music player for Plex Media Server</string>
    <string name="get_started">Get Started</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="two_factor_token">2 Factor Token</string>
    <string name="login">Login</string>
    <string name="select_server">Select Server</string>
    <string name="select_library">Select Library</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string-array name="theme_titles">
        <item>@string/theme_system_default</item>
        <item>@string/theme_dynamic</item>
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
    </string-array>
    <string name="theme_system_default">System default</string>
    <string name="theme_dynamic">Dynamic</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="choose_theme_preference_title">Choose theme</string>
    <string name="sign_out_preference_title">Sign out</string>
    <string name="sign_out_preference_description">Logs you out of your server</string>

    <string name="sign_out_dialog_summary">Are you sure you want to sign out?</string>

    <!-- Notification Channel Settings -->
    <string name="playback_channel_name">Media Playback</string>
    <string name="playback_channel_desc">Allows control of music from the notification pane</string>

    <!-- Now Playing -->
    <string name="beginning_of_song_timestamp">0:00</string>
    <string name="now_playing_album_artwork_content_desc">The artwork of the album</string>
    <string name="now_playing_play_pause_content_desc">Play or pause the music</string>
    <string name="now_playing_skip_content_desc">Skip to next track</string>
    <string name="now_playing_skip_to_previous_content_desc">Skip to previous track</string>
    <string name="now_playing_loop_content_desc">Loop current track</string>
    <string name="now_playing_shuffle_content_desc">Shuffle current queue</string>
    <string name="now_playing_collapse_content_desc">Close the now playing screen</string>

    <string name="now_playing_menu_to_lyrics">Lyrics</string>
    <string name="now_playing_menu_to_artist">Go to artist</string>
    <string name="now_playing_menu_to_album">Go to album</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="remove_from_playlist">Remove from Playlist</string>

    <!-- Search Fragment -->
    <string name="search_hint">Search Library</string>
    <string name="search_zero_state_title">No Search Results</string>

    <!-- SongMenuBottomSheet -->
    <plurals name="song_play_count">
        <item quantity="one">%1$d Play</item>
        <item quantity="other">%1$d Plays</item>
    </plurals>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="lyrics">Lyrics</string>
    <string name="info">Info</string>

    <string name="singles_and_eps">Singles &amp; EPs</string>
    <string name="view_all">View All</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="save">Save</string>
    <string name="additional_information">Additional Information</string>
</resources>
