<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nowPlayingBackground"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/song_menu"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/albumArtwork"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="16dp"
        android:src="@drawable/ic_menu_18dp"
        app:tint="@android:color/white"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <ImageView
        android:id="@+id/albumArtwork"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="16dp"
        tools:src="@drawable/ic_albums_black_24dp"
        android:contentDescription="@string/now_playing_album_artwork_content_desc" />

    <TextView
        android:id="@+id/song_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumArtwork"
        android:layout_marginTop="16dp"
        tools:text="Song Title" />

    <TextView
        android:id="@+id/song_artist"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song_title"
        tools:text="Song Artist" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/song_artist"
        app:labelBehavior="gone"
        android:layout_marginTop="16dp"
        app:trackColorInactive="@android:color/white"
        app:haloColor="@android:color/white" />

    <TextView
        android:id="@+id/cur_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seek_bar"
        app:layout_constraintStart_toStartOf="@id/seek_bar"
        tools:text="0:00"/>

    <TextView
        android:id="@+id/total_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seek_bar"
        app:layout_constraintEnd_toEndOf="@id/seek_bar"
        tools:text="4:20"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play_pause_btn"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_duration"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_pause_24dp"
        app:tint="@android:color/white"
        android:contentDescription="@string/now_playing_play_pause_content_desc" />

    <ImageView
        android:id="@+id/skip_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/play_pause_btn"
        app:layout_constraintBottom_toBottomOf="@id/play_pause_btn"
        app:layout_constraintStart_toEndOf="@id/play_pause_btn"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_skip_next_36dp"
        android:contentDescription="@string/now_playing_skip_content_desc"
        android:background="?android:attr/selectableItemBackgroundBorderless" />

    <ImageView
        android:id="@+id/prev_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/play_pause_btn"
        app:layout_constraintBottom_toBottomOf="@id/play_pause_btn"
        app:layout_constraintEnd_toStartOf="@id/play_pause_btn"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_skip_previous_36dp"
        android:contentDescription="@string/now_playing_skip_to_previous_content_desc"
        android:background="?android:attr/selectableItemBackgroundBorderless" />

    <ImageView
        android:id="@+id/repeat_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/play_pause_btn"
        app:layout_constraintBottom_toBottomOf="@id/play_pause_btn"
        app:layout_constraintStart_toEndOf="@id/skip_btn"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_repeat_none_36dp"
        android:contentDescription="@string/now_playing_loop_content_desc"
        android:background="?android:attr/selectableItemBackgroundBorderless" />

    <ImageView
        android:id="@+id/shuffle_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/play_pause_btn"
        app:layout_constraintBottom_toBottomOf="@id/play_pause_btn"
        app:layout_constraintEnd_toStartOf="@id/prev_btn"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_shuffle_off_36dp"
        android:contentDescription="@string/now_playing_shuffle_content_desc"
        android:background="?android:attr/selectableItemBackgroundBorderless" />

    <ImageView
        android:id="@+id/collapse_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/play_pause_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_expand_36dp"
        android:contentDescription="@string/now_playing_collapse_content_desc"
        android:background="?android:attr/selectableItemBackgroundBorderless" />
</androidx.constraintlayout.widget.ConstraintLayout>
