<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_artists">

    <fragment
        android:id="@+id/navigation_artists"
        android:name="com.devdunnapps.amplify.ui.artists.ArtistsFragment"
        android:label="@string/artists" />

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.devdunnapps.amplify.ui.albums.AlbumsFragment"
        android:label="@string/albums" />

    <fragment
        android:id="@+id/navigation_songs"
        android:name="com.devdunnapps.amplify.ui.songs.SongsFragment"
        android:label="@string/songs" />

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.devdunnapps.amplify.ui.playlists.PlaylistsFragment"
        android:label="@string/playlists" >
        <action
            android:id="@+id/action_navigation_playlists_to_playlistFragment"
            app:destination="@id/navigation_playlist" />
        <action
            android:id="@+id/action_navigation_playlists_to_playlistMenuBottomSheetFragment"
            app:destination="@id/playlistMenuBottomSheetFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_artist"
        android:name="com.devdunnapps.amplify.ui.artist.ArtistFragment"
        android:label="ArtistFragment">
        <action
            android:id="@+id/action_navigation_artist_to_navigation_artist_all_albums"
            app:destination="@id/navigation_artist_all_albums" />
        <action
            android:id="@+id/action_navigation_artist_to_navigation_artist_all_songs"
            app:destination="@id/navigation_artist_all_songs" />
        <argument
            android:name="artistKey"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_album"
        android:name="com.devdunnapps.amplify.ui.album.AlbumFragment"
        android:label="AlbumFragment">
        <argument
            android:name="albumId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_playlist"
        android:name="com.devdunnapps.amplify.ui.playlist.PlaylistFragment"
        android:label="PlaylistFragment">
        <argument
            android:name="playlistId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_artist_all_albums"
        android:name="com.devdunnapps.amplify.ui.artist.albums.ArtistAllAlbumsFragment"
        android:label="ArtistAllAlbums">
        <argument
            android:name="artistId"
            app:argType="string" />
        <argument
            android:name="isSinglesEPs"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_artist_all_songs"
        android:name="com.devdunnapps.amplify.ui.artist.songs.ArtistAllSongsFragment"
        android:label="ArtistAllSongs">
        <argument
            android:name="artistId"
            app:argType="string" />
    </fragment>

    <dialog
        android:id="@+id/navigation_song_bottom_sheet"
        android:name="com.devdunnapps.amplify.ui.songbottomsheet.SongMenuBottomSheetFragment"
        android:label="SongMenuBottomSheetFragment">
        <argument
            android:name="songId"
            app:argType="string" />

        <argument
            android:name="playlistId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />

        <action
            android:id="@+id/action_navigation_song_bottom_sheet_to_songAdditionalInfoBottomSheetFragment"
            app:destination="@id/songAdditionalInfoBottomSheetFragment"
            app:popUpTo="@id/navigation_song_bottom_sheet"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_navigation_song_bottom_sheet_to_song_lyrics"
            app:destination="@id/lyricsBottomSheet"
            app:popUpTo="@id/navigation_song_bottom_sheet"
            app:popUpToInclusive="true" />

        <action android:id="@+id/action_navigation_song_bottom_sheet_to_add_to_playlist_bottom_sheet"
            app:destination="@id/navigation_add_to_playlist_bottom_sheet"
            app:popUpTo="@id/navigation_song_bottom_sheet"
            app:popUpToInclusive="true" />
    </dialog>

    <dialog
        android:id="@+id/navigation_add_to_playlist_bottom_sheet"
        android:name="com.devdunnapps.amplify.ui.addtoplaylist.AddToPlaylistBottomSheetFragment"
        android:label="AddToPlaylistBottomSheetFragment">
        <argument
            android:name="songId"
            app:argType="string" />
    </dialog>

    <dialog
        android:id="@+id/playlistMenuBottomSheetFragment"
        android:name="com.devdunnapps.amplify.ui.playlists.PlaylistMenuBottomSheetFragment"
        android:label="PlaylistMenuBottomSheetFragment">
        <argument
            android:name="playlistId"
            app:argType="string" />
    </dialog>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.devdunnapps.amplify.ui.search.SearchFragment"
        android:label="SearchFragment">
        <action
            android:id="@+id/action_searchFragment_to_navigation_playlist"
            app:destination="@id/navigation_playlist" />
    </fragment>

    <action android:id="@+id/action_global_searchFragment"
        app:destination="@id/searchFragment" />

    <action android:id="@+id/action_global_navigation_artist"
        app:destination="@id/navigation_artist"
        app:restoreState="false" />

    <action android:id="@+id/action_global_navigation_album"
        app:destination="@id/navigation_album" />

    <action android:id="@+id/action_global_navigation_song_bottom_sheet"
        app:destination="@id/navigation_song_bottom_sheet" />

    <dialog
        android:id="@+id/songAdditionalInfoBottomSheetFragment"
        android:name="com.devdunnapps.amplify.ui.songbottomsheet.SongAdditionalInfoBottomSheetFragment"
        android:label="SongAdditionalInfoBottomSheetFragment">

        <argument
            android:name="song"
            app:argType="com.devdunnapps.amplify.domain.models.Song" />
    </dialog>

    <action android:id="@+id/action_global_playlistMenuBottomSheetFragment"
        app:destination="@id/playlistMenuBottomSheetFragment" />

    <dialog
        android:id="@+id/lyricsBottomSheet"
        android:name="com.devdunnapps.amplify.ui.nowplaying.LyricsBottomSheet"
        android:label="LyricsBottomSheet">
        <argument
            android:name="song"
            app:argType="com.devdunnapps.amplify.domain.models.Song" />
    </dialog>
</navigation>
